--- a/app/src/main/res/layout/activity_client_start.xml
+++ b/app/src/main/res/layout/activity_client_start.xml
@@ -11,13 +11,13 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.20">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/text_bienvenido"
@@ -41,6 +41,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
+            android:enabled="false"
             android:hint="Nombre del cliente "
             android:inputType="number"
             android:selectAllOnFocus="false"
@@ -79,6 +80,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
