--- a/app/src/main/res/layout/activity_case.xml
+++ b/app/src/main/res/layout/activity_case.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_color"
-    tools:context=".Case">
+    tools:context=".vistas.Case">
 
     <LinearLayout
         android:id="@+id/linearLayout"
