--- a/app/src/main/res/layout/activity_client_start.xml
+++ b/app/src/main/res/layout/activity_client_start.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_color"
-    tools:context=".ClientStart">
+    tools:context=".vistas.ClientStart">
 
     <LinearLayout
         android:id="@+id/linearLayout"
