--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_color"
-    tools:context=".ForgotPassword">
+    tools:context=".vistas.ForgotPassword">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -46,7 +46,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/text_usernameR"
+            android:id="@+id/text_cedula"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
