--- a/app/src/main/res/layout/activity_unassigned_tickets.xml
+++ b/app/src/main/res/layout/activity_unassigned_tickets.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_color"
-    tools:context=".UnassignedTickets">
+    tools:context=".vistas.UnassignedTickets">
 
     <LinearLayout
         android:id="@+id/linearLayout"
