login, recuperar contrasena, registro completos por firebase

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
+        android:foregroundGravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,42 +33,12 @@
 
 
         <TextView
-            android:id="@+id/text_usuario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="50dp"
-            android:text="@string/text_usuario"
-            android:textColor="@color/blue_500"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/text_cedula"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:hint="@string/text_ingresa_t_usuario"
-            android:inputType="number"
-            android:selectAllOnFocus="true"
-            android:singleLine="false"
-            tools:ignore="TouchTargetSizeCheck" />
-
-
-        <TextView
             android:id="@+id/text_correo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:text="@string/text_e_mail"
@@ -76,7 +47,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/text_ingresa_su_e_mail"
+            android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -96,7 +67,7 @@
             android:layout_width="176dp"
             android:layout_height="43dp"
             android:layout_gravity="center"
-            android:layout_marginTop="22dp"
+            android:layout_marginTop="36dp"
             android:background="@drawable/botones"
             android:shadowColor="@color/black"
             android:text="@string/text_recuperar"
