--- a/app/src/main/res/layout/activity_sing_in.xml
+++ b/app/src/main/res/layout/activity_sing_in.xml
@@ -11,7 +11,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="6dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="25dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="50dp"
             android:text="Nombre completo"
@@ -55,7 +55,6 @@
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:hint="Ingrese el nombre completo"
-            android:inputType="number"
             android:selectAllOnFocus="true"
             android:singleLine="false"
             tools:ignore="TouchTargetSizeCheck" />
@@ -128,7 +127,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
-            android:text="@string/text_contrasena"
+            android:text="Tipo de usuario"
             android:textColor="@color/blue_500"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -142,8 +141,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
-            android:hint="Usuario o tecnico"
-            android:inputType="textPassword"
+            android:hint="cliente o trabajador"
             android:selectAllOnFocus="true"
             android:singleLine="false"
             tools:ignore="TouchTargetSizeCheck" />
@@ -200,9 +198,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:hint="Ingrese nuevamente su contraseña"
-            android:imeActionLabel="@string/action_sign_in_short"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
+            android:inputType="textPassword"
             android:selectAllOnFocus="true"
             tools:ignore="TouchTargetSizeCheck" />
 
